package org.example;

interface Descuento {
    double aplicarDescuento(double precio);
}
