package org.example;

public interface Elemento {
    int getCodigo();
    double getPrecio();
}
